<resources>
    <string name="app_name">Tutor Finder</string>
    <string name="LoginText">Login</string>
    <string name="emailHint">Enter Your Email</string>
    <string name="emailL">Login</string>
    <string name="passwordHint">Password</string>
    <string name="passwordL">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="hyperlinkForgot"><a href="">Forgot your password?Reset here</a></string>
    <string name="hyperlinkRegister"><a href="">Don\'t have an account?Register here</a></string>
    <string name="selectRole">Are you a Teacher or Student?</string>
    <string name="tutorimg">Tutor</string>
    <string name="stdntimg">Student</string>
    <string name="register">Sign Up</string>
    <string name="Fname">Name</string>
    <string name="rphone">Phone</string>
    <string name="remail">Email</string>
    <string name="rbirthday">Birth Day</string>
    <string name="rschool">School</string>
    <string name="rNIC">NIC</string>
    <string name="rstream">A/L Stream</string>
    <string name="btnregisterNext">Next</string>
    <string name="forgottonpassEmail">Enter your Email</string>
    <string name="forgottonmsg">Please enter your email. we will send you a link to reset your password</string>
    <string name="regPassword">Create a Password</string>
    <string name="regConfirmPassword">Confirm Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btmNavNotification">Notification</string>
    <string name="btmNavChat">Chat</string>
    <string name="btmNavSearch">Search Class</string>
    <string name="btmNavProfile">Profile</string>
    <string name="chatgroups">Group Name</string>
    <string name="groupCName">Group Name</string>
    <string name="chathint">Enter Your Message</string>
    <string name="lastMessage">Last Message</string>
    <string name="notif">Notification</string>
    <string name="notifTime">Time</string>
    <string name="snameR">Student Name </string>
    <string name="sbirthdayR">DD/MM/YEAR</string>
    <string name="sphoneR">07********</string>
    <string name="semailR">example@email.com</string>
    <string name="sALstreamR">A/L Stream</string>
    <string name="seditPro">Edit</string>
    <string name="sdeletePro">Delete</string>
    <string name="passworMSG">Please fill below spaces if want to Reset your Password</string>
    <string name="newClass">Join for a Class</string>
    <string name="searchSubject">Enter Subject</string>
    <string name="searchbtn">Search</string>
    <string name="CourseOffers">Special offers for <br /> A/L Students<br /> (Grade 13)</string>
    <string name="offerMsg1">Select your A/L Stream</string>
    <string name="clickforOffer">Click Here</string>
    <string name="ScienceMathsStream">Science(Maths)</string>
    <string name="ScienceBioStream">Science(Bio)</string>
    <string name="CommerceStream">Commerce</string>
    <string name="ArtStream">Art</string>
    <string name="Subject">Subject :</string>
    <string name="Tutor">Tutor :</string>
    <string name="Time">Time :</string>
    <string name="SubjectName">Subject Name</string>
    <string name="TutorName">Tutor Name</string>
    <string name="TimeSc">Time</string>
    <string name="S1">01).</string>
    <string name="S2">02).</string>
    <string name="S3">03).</string>
    <string name="TotalOffer">Total Amount(for 6 months) : Amount</string>
    <string name="TotalOfferMonths">Final Amount : </string>
    <string name="CourseOffer">Grab Your Chance</string>
    <string name="ClassName">Class Name : </string>
    <string name="joinbtn">Join</string>
    <string name="amount">Amount    :</string>
    <string name="slipactivity">Please make your full payment to the<br /> Bank Account : 123456789102 <br /> and Upload a screenshot here.<br/>
        We will review your details of payment and will added to the class group as soon as possible.</string>
    <string name="sendSlipbtn">Send</string>
    <string name="SearchResults">Search Results</string>
    <string name="SubjectNameResults">Maths</string>
    <string name="ClassNameResults">Class Name    - Maths12A</string>
    <string name="GradeResults">Grade   - 12</string>
    <string name="TimeResults">Time     – Saturday 4.00-5.00PM</string>
    <string name="AmountResults">Amount( for 6 months )     - Rs:5000.00</string>
    <string name="TutorNameResults">Tutor   - P.Perera </string>
    <string name="LogOut">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnsc">Science</string>
    <string name="btnmaths">Maths</string>
    <string name="btnarts">Arts</string>
    <string name="btncom">Commerce</string>
    <string name="btntec">Technology</string>
    <string name="btnsubmit">Submit</string>
    <string name="phoneno">Phone no</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="degree">Degree</string>
    <string name="qual">Qualifications</string>
    <string name="name">Name</string>
    <string name="tick">Accept</string>
    <string name="cross">Decline</string>
    <string name="month">Select month</string>
    <string name="un">UserName</string>
    <string name="Grade">Grade</string>
    <string name="classID">ClassID</string>
    <string name="bankSlip">BankSlip</string>
    <string name="add">ADD</string>
    <string name="status">Status</string>
    <string name="deg">Degree</string>
    <string name="age">Age</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="tutor">Tutor</string>
    <string name="student">Student</string>
    <string name="remove">Remove</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="msg">Message</string>
    <string name="btnpay">Payment Details</string>
    <string name="btnRequest">View Request</string>
    <string name="btnStuTotuors">User Details</string>
    <string name="subject">Subject</string>
    <string name="time">Time</string>
    <string name="class_name">Class Name</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>