<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    app:cardMaxElevation="2dp"
    app:contentPadding="3dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/textview_border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvsearhchedSubject"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/SubjectNameResults"
            android:textColor="@color/ScreenBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/groupclass" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvClassNameS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ClassNameResults"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvClassGradeS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/GradeResults"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvClassTimeS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TimeResults"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvClassTutorS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TutorNameResults"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvClassAmountS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/AmountResults"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnjoinGroup"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/ScreenBackground"
            android:text="@string/joinbtn"
            android:textColor="@color/white" />
    </LinearLayout>

    
</androidx.cardview.widget.CardView>