<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminUI.ViewRequest">

    <View
        android:id="@+id/view"
        android:layout_width="363dp"
        android:layout_height="635dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Adtvname"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Adtvpno"
        app:layout_constraintStart_toStartOf="@+id/Adtvpno"
        app:layout_constraintTop_toBottomOf="@+id/AdtvSubject" />

    <TextView
        android:id="@+id/AdtvSubject"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:text="@string/subject"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Adtvname"
        app:layout_constraintStart_toStartOf="@+id/Adtvname"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/tvmail"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/AdtvDOB"
        app:layout_constraintStart_toStartOf="@+id/AdtvDOB"
        app:layout_constraintTop_toBottomOf="@+id/Adtvpno" />

    <TextView
        android:id="@+id/AdtvDOB"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Adtvdegree"
        app:layout_constraintStart_toStartOf="@+id/Adtvdegree"
        app:layout_constraintTop_toBottomOf="@+id/tvmail" />

    <TextView
        android:id="@+id/Adtvdegree"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_marginBottom="36dp"
        android:text="@string/degree"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/AdtvQuali"
        app:layout_constraintStart_toStartOf="@+id/AdtvQuali" />

    <TextView
        android:id="@+id/AdtvQuali"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:text="@string/qual"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/AdacceptBtn"
        app:layout_constraintStart_toStartOf="@+id/AdacceptBtn" />

    <TextView
        android:id="@+id/Adtvpno"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:text="@string/phoneno"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tvmail"
        app:layout_constraintStart_toStartOf="@+id/tvmail"
        app:layout_constraintTop_toBottomOf="@+id/Adtvname" />

    <Button
        android:id="@+id/AdacceptBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/purpleBtn"
        android:background="@drawable/textview_border"
        android:text="@string/tick"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Button
        android:id="@+id/AddeclineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/YellowBtn"
        android:text="@string/cross"
        android:background="@drawable/textview_border"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/AdacceptBtn" />

    <TextView
        android:id="@+id/Adtv_sub"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AdtvSubject"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_name" />

    <TextView
        android:id="@+id/Adtv_name"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Adtvname"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_no" />

    <TextView
        android:id="@+id/Adtv_no"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Adtvpno"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_email" />

    <TextView
        android:id="@+id/Adtv_email"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvmail"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_dob" />

    <TextView
        android:id="@+id/Adtv_dob"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AdtvDOB"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_degree" />

    <TextView
        android:id="@+id/Adtv_degree"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Adtvdegree"
        app:layout_constraintEnd_toEndOf="@+id/Adtv_quali" />

    <TextView
        android:id="@+id/Adtv_quali"
        android:layout_width="167sp"
        android:layout_height="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AdtvQuali"
        app:layout_constraintEnd_toEndOf="@+id/AddeclineBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>