<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentUI.CourseOffersStudent">

    <Button
        android:id="@+id/btnMaths"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="@color/ScreenBackground"
        android:text="@string/ScienceMathsStream"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectStream" />

    <Button
        android:id="@+id/btnBio"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="@color/ScreenBackground"
        android:text="@string/ScienceBioStream"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMaths" />

    <Button
        android:id="@+id/btnCommerce"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="@color/ScreenBackground"
        android:text="@string/CommerceStream"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBio" />

    <Button
        android:id="@+id/btnArt"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="@color/ScreenBackground"
        android:text="@string/ArtStream"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCommerce" />

    <TextView
        android:id="@+id/tvSelectStream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/offerMsg1"
        android:textColor="@color/Red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>