<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentUI.SearchFragmentStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:layout_marginTop="350dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGrabOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal|center"
                android:text="@string/CourseOffers"
                android:textAlignment="center"
                android:textColor="@color/Red"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGrabOffer"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_border"
                android:backgroundTint="@color/ScreenBackground"
                android:text="@string/clickforOffer"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvJoinClassTheme"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:gravity="center"
            android:text="@string/newClass"
            android:textColor="@color/ScreenBackground"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvSearchSubject"
            android:layout_width="371dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/searchSubject"
            android:textColorHint="@color/grey" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="69dp"
            android:layout_height="58dp"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="-59dp"
            android:src="@drawable/ic_search_foreground" />

        <Button
            android:id="@+id/btnSearchSubject"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/ScreenBackground"
            android:text="@string/searchbtn"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>